# mokophone

./: .gitignore  Makefile.am  autogen.sh  configure.ac  mokophone_git.bb  run-phone.sh
data/: Makefile.am  mokophone-activate.sh  mokophone-contacts.desktop  mokophone-phone.desktop
data/themes/: Makefile.am
data/themes/gry/: Makefile.am  theme.edc
src/: Makefile.am  callblock.c  callblock.h  callwin.c  callwin.h  contactsview.c  contactsview.h  globals.h  gsm.c  gsm.h  logentry.c  logentry.h  logview.c  logview.h  main.c  mokophone-service.vala  phonewin.c  phonewin.h  simauthwin.c  simauthwin.h  sound.c  sound.h
vapi/: phone.vapi
